--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -6,11 +6,11 @@
 
     <fragment
         android:id="@+id/articlesFragment"
-        android:name="com.androiddevs.mvvmnewsapp.ui.fragments.ArticleFragment"
+        android:name="com.mahmoudalim.mvvmnewsapp.ui.fragments.ArticleFragment"
         android:label="ArticlesFragment" />
     <fragment
         android:id="@+id/breakingNewsFragment"
-        android:name="com.androiddevs.mvvmnewsapp.ui.fragments.BreakingNewsFragment"
+        android:name="com.mahmoudalim.mvvmnewsapp.ui.fragments.BreakingNewsFragment"
         android:label="BreakingNewsFragment">
         <action
             android:id="@+id/action_breakingNewsFragment_to_articlesFragment"
@@ -22,7 +22,7 @@
     </fragment>
     <fragment
         android:id="@+id/savedNewsFragment"
-        android:name="com.androiddevs.mvvmnewsapp.ui.fragments.SavedNewsFragment"
+        android:name="com.mahmoudalim.mvvmnewsapp.ui.fragments.SavedNewsFragment"
         android:label="SavedNewsFragment">
         <action
             android:id="@+id/action_savedNewsFragment_to_articlesFragment"
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/searchNewsFragment"
-        android:name="com.androiddevs.mvvmnewsapp.ui.fragments.SearchNewsFragment"
+        android:name="com.mahmoudalim.mvvmnewsapp.ui.fragments.SearchNewsFragment"
         android:label="SearchNewsFragment">
         <action
             android:id="@+id/action_searchNewsFragment_to_articlesFragment"
