showing clicked articlkes in Webview (Article Fragment) with Navigation graph serilazible to pass the clicked Article

--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -7,7 +7,11 @@
     <fragment
         android:id="@+id/articlesFragment"
         android:name="com.mahmoudalim.mvvmnewsapp.ui.fragments.ArticleFragment"
-        android:label="ArticlesFragment" />
+        android:label="ArticlesFragment" >
+        <argument
+            android:name="article"
+            app:argType="com.mahmoudalim.mvvmnewsapp.models.Article" />
+    </fragment>
     <fragment
         android:id="@+id/breakingNewsFragment"
         android:name="com.mahmoudalim.mvvmnewsapp.ui.fragments.BreakingNewsFragment"
