--- a/app/src/main/res/layout/fragment_breaking_news.xml
+++ b/app/src/main/res/layout/fragment_breaking_news.xml
@@ -7,17 +7,66 @@
     android:background="@color/BG_white">
 
 
-<androidx.recyclerview.widget.RecyclerView
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foregroundGravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:visibility="visible">
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+            <include layout="@layout/item_article_placeholder" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBreakingNews"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:clipToPadding="false"
         android:paddingBottom="50dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"  />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/paginationProgressBar"
@@ -30,6 +79,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/errorImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/netowrk_error"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
