--- a/app/src/main/res/layout/fragment_saved_news.xml
+++ b/app/src/main/res/layout/fragment_saved_news.xml
@@ -7,10 +7,12 @@
     android:background="@color/BG_white">
 
 
-<androidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSavedNews"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
