--- a/app/src/main/res/layout/item_article_placeholder.xml
+++ b/app/src/main/res/layout/item_article_placeholder.xml
@@ -17,6 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/BG_shimmer"
         app:cardCornerRadius="10dp"
         android:clipToPadding="true">
 
@@ -32,6 +33,7 @@
                 android:layout_marginTop="16dp"
                 android:clipToPadding="true"
                 app:cardCornerRadius="10dp"
+                android:background="@color/BG_shimmer"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle">
 
@@ -39,18 +41,18 @@
                     android:id="@+id/ivArticleImage"
                     android:layout_width="160dp"
                     android:layout_height="100dp"
+                    android:background="@color/BG_shimmer"
                     android:scaleType="centerCrop" />
             </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/tvSource"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="SOURCE"
-                android:textColor="@color/colorSecondary"
+                android:background="@color/BG_shimmer"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -58,13 +60,12 @@
 
             <TextView
                 android:id="@+id/tvPublishedAt"
-                android:layout_width="wrap_content"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="PUBLISHED AT"
-                android:textColor="@color/colorSecondary"
+                android:background="@color/BG_shimmer"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -79,8 +80,7 @@
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:text="TITLE"
-                android:textColor="@color/colorPrimary"
+                android:background="@color/BG_shimmer"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -90,16 +90,15 @@
             <TextView
                 android:id="@+id/tvDescription"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:background="@color/BG_shimmer"
                 android:ellipsize="end"
                 android:layoutDirection="locale"
                 android:maxLines="4"
-                android:text="DESCRIPTION"
-                android:textColor="@android:color/black"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toTopOf="@+id/tvPublishedAt"
                 app:layout_constraintEnd_toEndOf="parent"
