--- a/app/src/main/res/layout/item_article_placeholder.xml
+++ b/app/src/main/res/layout/item_article_placeholder.xml
@@ -90,7 +90,7 @@
             <TextView
                 android:id="@+id/tvDescription"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
@@ -98,14 +98,44 @@
                 android:background="@color/BG_shimmer"
                 android:ellipsize="end"
                 android:layoutDirection="locale"
-                android:maxLines="4"
-                android:textSize="14sp"
+                app:layout_constraintBottom_toTopOf="@+id/tvDescription3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/cardView2"
+                app:layout_constraintTop_toBottomOf="@+id/tvDescription2" />
+
+            <TextView
+                android:id="@+id/tvDescription2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:background="@color/BG_shimmer"
+                android:ellipsize="end"
+                android:layoutDirection="locale"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/cardView2"
+                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+            <TextView
+                android:id="@+id/tvDescription3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="@color/BG_shimmer"
+                android:ellipsize="end"
+                android:layoutDirection="locale"
                 app:layout_constraintBottom_toTopOf="@+id/tvPublishedAt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/cardView2"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-                app:layout_constraintVertical_bias="0.468" />
+                app:layout_constraintVertical_bias="0.783" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
