--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -5,9 +5,9 @@
         android:id="@+id/breakingNewsFragment"
         android:icon="@drawable/ic_breaking_news"/>
 
-    <item android:title="@string/news_categories"
-        android:id="@+id/categoriesFragment"
-        android:icon="@android:drawable/ic_dialog_dialer"/>
+    <item android:title="@string/CoronaNews_categories"
+        android:id="@+id/CoronaNewsFragment"
+        android:icon="@drawable/ic_covid_nav"/>
 
     <item android:title="@string/saved_news"
         android:id="@+id/savedNewsFragment"
